src/mcp/test/fixtures/valid/mock-separate-statements.fixture.ts
/**
 * @fixture valid
 * @rule mock-formatting
 * @description Separate mock statements (allowed)
 * @expectedViolations 0
 * @simulatedPath src/lambdas/Test/test/index.test.ts
 */
mockFn.mockResolvedValueOnce(a)
mockFn.mockResolvedValueOnce(b)
